# continuum-intelligence-v3

./: .dockerignore  .eslintrc.json  .gitignore  .replit  AGENTS.md  ASX200_SECTOR_NARRATIVE_MODELS.md  BUGFIX_001A_HYPOTHESIS_IDENTITY.md  BUGFIX_002_UNIVERSAL_SCORING.md  CLAUDE.md  DECISIONS.md  DEPLOY_MACRO_FIX.md  Dockerfile  ERRATA_001_MACRO_WEIGHTS.md  ERRATA_002_IDIO_AMPLIFICATION.md  ERRATA_003_OPTICAL_COHERENCE.md  FIXLIST.md  GATES_4_6_CHECKLIST.md  IMPLEMENTATION-BRIEF.md  INVESTOR_BRIEFING_SPEC.md  MASTER_IMPLEMENTATION_INSTRUCTIONS.md  MODULE_MAP.md  NARRATIVE_FRAMEWORK_V2.md  NARRATIVE_WRITING_GUIDE.md  PLAN.md  README.md  RELEASE_SIGNOFF.md  SCHEMA.md  SECTION02_REDESIGN.md  SECTOR_OVERLAY_FRAMEWORK.md  TASK_thesis_capture_integration.md  TESTS.md  THESIS_SKEW_MATHEMATICAL_FIX.md  TOP_0.1pct_FRAMEWORK.md  VALUATION_RANGE_SPEC.md  audit_results.json  ci-diagram-ach-engine.html  ci-diagram-agents.html  ci-diagram-platform-flow.html  ci-diagram-tech-stack.html  continuum-v2-coding-instruction.md  (+27 more)
.claude/: launch.json  settings.json  settings.local.json
agents/: README.md  gold_agent_prompt.md
api/: .env.example  CLAUDE.md  Dockerfile  auth.py  batch_analysis.py  config.py  conversations.py  data_providers.py  db.py  decompose.py  economist_api.py  economist_prompt_builder.py  economist_state_service.py  economist_system_prompt.py  email_service.py  embeddings.py  errors.py  extraction.py  gemini_client.py  github_commit.py  gold_agent.py  handoff.py  handoff_api.py  ingest.py  insights.py  llm.py  macro_sensitivity.py  main.py  memory_extractor.py  pm_db.py  (+33 more)
(+721 files in other folders)
